# buptcream_serial_comm_lab

./: CMakeLists.txt  CMakePresets.json  README.md  package.xml
include/serial_comm/: message.hpp  serial_receiver.hpp  serial_sender.hpp
scripts/: start.sh
src/: msg_publisher.cpp  serial_receiver.cpp  serial_sender.cpp  test_serial_receiver.cpp
